style.css
html, body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    font-family: Arial, Helvetica, sans-serif;
}
header, main {
    max-width: 800px;
    margin: 20px auto 40px;
}
header h1, header h2 {
    text-align: center;
    font-weight: 100;
    line-height: 1.4em;
}
header img {
    width: 100%;
    margin: 20px auto;
}
header p {
    font-size: 1.4em;
}
nav {
    padding: 20px;
}
.list-item {
    display: flex;
    max-width: 800px;
    margin: 80px auto;
}
.list-item-image {

}
.list-item-details {
    padding: 20px;
    background: white;
    width: 100%;
}
.list-item-details p {
    padding: 20px 0;
}
.btn {
    background: red;
    color: white;
    border: none;
    padding: 10px;
    cursor: pointer;
    border-radius: 2px;
    font-size: 1.05em;
    text-decoration: none;
}
@media only screen and (max-width: 800px) {
    .list-item {
        display: block;
    }
    .list-item img {
        width: 100%;
        height: 200px;
    }
}

